# 365DaysOfML-repo

./: .gitignore
Datacamp-Numpy/: main.py  pyproject.toml
Datacamp-Statistic/: day_18.ipynb  main.ipynb  pyproject.toml
Pandas/kaggle_course/: README.md  download_datasets.sh  exercise-data-types-and-missing-values.ipynb  exercise-grouping-and-sorting.ipynb  exercise-indexing-selecting-assigning.ipynb  exercise-summary-functions-and-maps.ipynb  pyproject.toml
first_data_analysis_project/: .dockerignore  Dockerfile  main.ipynb  main.py  pyproject.toml  requirements.txt
first_data_analysis_project/ML_model/: Linear_regression.pkl  Logistic_regression.pkl
